--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -29,7 +29,7 @@
             <form method="POST" enctype="multipart/form-data" action="">
               <div class="card-body">
                 <div class="form-group">
-                  <label for="">Metadata File (LC08 - MTL.TXT)</label>
+                  <label for="">Metadata File (LC08 - MTL.txt)</label>
                   <input type="file" class="form-control-file" id="fileMetadata" name="fileMetadata">
                 </div>
                 <div class="form-group">
@@ -47,7 +47,17 @@
             </form>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Lahan Perkebunan</h4>
+            </div>
+            <div class="card-body">
+                <img src="/static/assets/img/Kebun.png" alt="Original" style="width: 100%;">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5">
           <div class="card full-height">
             <div class="card-header">
                 <h4 class="card-title">Hasil Analisis</h4>
@@ -58,20 +68,12 @@
                         <a class="nav-link active" id="pills-home-tab-nobd" data-toggle="pill" href="#pills-home-nobd" role="tab" aria-controls="pills-home-nobd" aria-selected="true">NDVI</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-profile-tab-nobd" data-toggle="pill" href="#pills-profile-nobd" role="tab" aria-controls="pills-profile-nobd" aria-selected="false">NDWI</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" id="pills-contact-tab-nobd" data-toggle="pill" href="#pills-contact-nobd" role="tab" aria-controls="pills-contact-nobd" aria-selected="false">CWSI</a>
                     </li>
                 </ul>
                 <div class="tab-content mt-2 mb-3" id="pills-without-border-tabContent">
                     <div class="tab-pane fade show active" id="pills-home-nobd" role="tabpanel" aria-labelledby="pills-home-tab-nobd">
-                        <img src="{{img_NDVI}}" alt="" style="max-width: 100%;">
-                    </div>
-                    <div class="tab-pane fade" id="pills-profile-nobd" role="tabpanel" aria-labelledby="pills-profile-tab-nobd">
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-                        <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.
-                        </p>
+                        <img src="/static/assets/img/NDVI.png" alt="" style="width: 100%;">
                     </div>
                     <div class="tab-pane fade" id="pills-contact-nobd" role="tabpanel" aria-labelledby="pills-contact-tab-nobd">
                         <p>Pityful a rethoric question ran over her cheek, then she continued her way. On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
@@ -79,16 +81,6 @@
                         <p> But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their</p>
                     </div>
                 </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <div class="card-header">
-                <h4 class="card-title">Lahan Perkebunan</h4>
-            </div>
-            <div class="card-body">
-                <img src="/static/assets/img/Original.jpg" alt="Original" style="max-width: 100%;">
             </div>
           </div>
         </div>
