--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -5,7 +5,7 @@
 			<div class="logo-header" data-background-color="blue">
 				
 				<a href="index.html" class="logo">
-					<img src="/static/assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
+					<img src="/static/assets/img/Logo_IPB_University_Horizontal_Putih.png" alt="navbar brand" class="navbar-brand" style="width: 80%">
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
