--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -76,6 +76,8 @@
                                             <div class="row">
                                               <div class="col-md-6" style="padding-right: 7.5px;">
                                                 <img src="{{data[2]}}" alt="" style="width: 100%;">
+                                                <br><br>
+                                                <img src="/static/assets/img/Legenda_CWSI.png" alt="" style="">
                                               </div>
                                               <div class="col-md-6" style="padding-left: 7.5px;">
                                                 <img src="/static/assets/img/Kebun_Original_Fix.jpg" alt="" style="width: 100%;">
@@ -105,10 +107,6 @@
                 <form method="POST" enctype="multipart/form-data" action="">
                   <div class="card-body">
                     <div class="form-group">
-                      <label for="">File Metadata</label>
-                      <input type="file" class="form-control-file" id="fileMetadata" name="fileMetadata">
-                    </div>
-                    <div class="form-group">
                       <label for="">Citra Band 4</label>
                       <input type="file" class="form-control-file" id="band4" name="band4">
                     </div>
@@ -123,6 +121,10 @@
                     <div class="form-group">
                       <label for="">Citra Band 11</label>
                       <input type="file" class="form-control-file" id="band11" name="band11">
+                    </div>
+                    <div class="form-group">
+                      <label for="">File Metadata</label>
+                      <input type="file" class="form-control-file" id="fileMetadata" name="fileMetadata">
                     </div>
                     <div class="form-group">
                       <label for="">File Water Vapor</label>
@@ -193,7 +195,7 @@
           <div class="card">
             <div class="card-body">
               <div class="">
-                <img src="/static/assets/img/Kebun_Original_Fix.jpg" alt="" style="width: 100%;">
+                <img src="/static/assets/img/Kebun_Original_Region.png" alt="" style="width: 100%;">
               </div>
             </div>
           </div>
